Update css/fix-scrollbar.css

--- a/src/css/context-menu.css
+++ b/src/css/context-menu.css
@@ -111,40 +111,3 @@
     height: 333px;
     overflow-y: scroll;
 }
-
-
-
-/* ------ SCROLL BAR FIX FOR CHROME ------ */
-/* ? chrome scrollbar is still the old blocky one */
-/* ? this is a fix for that */
-
-/* width */
-.context-menu::-webkit-scrollbar {
-    cursor: pointer;
-    width: 10px;
-}
-
-/* Track */
-.context-menu::-webkit-scrollbar-track {
-    cursor: pointer;
-    border-radius: 10px;
-    background: var(--menu-background);
-}
-
-/* Handle */
-.context-menu::-webkit-scrollbar-thumb {
-    cursor: pointer;
-    background: #888;
-    border-radius: 10px;
-}
-
-/* Handle on hover */
-.context-menu::-webkit-scrollbar-thumb:hover {
-    cursor: pointer;
-    background: #555;
-}
-
-/* ? the 0.8px of the border makes the scrollbar feel off -> remove it */
-.context-menu {
-    border-right: 0;
-}
