--- a/src/css/fix-scrollbar.css
+++ b/src/css/fix-scrollbar.css
@@ -1,3 +1,36 @@
+/** ------ SCROLL BAR FIX FOR CHROME ------ */
+/* chrome scrollbar is still the old blocky one */
+/* this is a fix for that */
+
+/* width */
+::-webkit-scrollbar {
+    cursor: pointer;
+    width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    cursor: pointer;
+    border-radius: 8px;
+    background: var(--menu-background);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    cursor: pointer;
+    background: #888;
+    border-radius: 8px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    cursor: pointer;
+    background: #555;
+}
+
+
+
+
 /** IN IFRAME SCROLLBAR */
 
 .in-iframe > *::-webkit-scrollbar {
